<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mine.MineFragment">

   <LinearLayout
       android:id="@+id/fl_header_bg"
       android:layout_width="match_parent"
       android:layout_height="@dimen/dp_200"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       android:gravity="center"
       android:orientation="vertical"
       android:background="@color/colorPrimary"
       >
      <ImageView
          android:id="@+id/iv_head"
          android:layout_width="@dimen/dp_60"
          android:layout_height="@dimen/dp_60"
          tools:src="@mipmap/ic_launcher" />
      <TextView
          android:id="@+id/tv_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/sp_14"
          android:textColor="@color/white"
          android:layout_marginTop="@dimen/dp_5"
          />
   </LinearLayout>



   <androidx.cardview.widget.CardView
       android:id="@+id/cardview"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/dp_30"
       android:layout_marginEnd="@dimen/dp_30"
       android:layout_marginTop="@dimen/dp_180"
       app:cardPreventCornerOverlap="true"
       app:cardUseCompatPadding="true"
       app:cardCornerRadius="@dimen/dp_10"
       app:layout_constraintTop_toTopOf="parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingTop="@dimen/dp_10"
          android:paddingBottom="@dimen/dp_10"
          >

         <TextView
             android:id="@+id/tv_integral"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:drawableTop="@drawable/icon_integral"
             android:drawablePadding="@dimen/dp_5"
             android:text="@string/home_mine_integral"
             />
         <TextView
             android:id="@+id/tv_share"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:drawableTop="@drawable/icon_share"
             android:drawablePadding="@dimen/dp_5"
             android:text="@string/home_mine_share"
             />
         <TextView
             android:id="@+id/tv_collect"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:drawableTop="@drawable/icon_collection"
             android:drawablePadding="@dimen/dp_5"
             android:text="@string/home_mine_collect"
             />

      </LinearLayout>

   </androidx.cardview.widget.CardView>

   <TextView
       android:id="@+id/tv_todo"
       android:layout_width="match_parent"
       android:layout_height="@dimen/dp_50"
       android:text="@string/home_mine_todo"
       android:gravity="center_vertical"
       android:drawableStart="@drawable/icon_todo"
       android:paddingStart="@dimen/dp_15"
       android:paddingEnd="@dimen/dp_15"
       android:drawablePadding="@dimen/dp_5"
       android:layout_marginTop="@dimen/dp_10"
       android:drawableEnd="@drawable/icon_arrow"
       app:layout_constraintTop_toBottomOf="@id/cardview"
       />
   <TextView
       android:id="@+id/tv_live"
       android:layout_width="match_parent"
       android:layout_height="@dimen/dp_50"
       android:text="@string/main_mine_goto_live"
       android:gravity="center_vertical"
       android:drawableStart="@drawable/icon_live"
       android:paddingStart="@dimen/dp_15"
       android:paddingEnd="@dimen/dp_15"
       android:drawablePadding="@dimen/dp_5"
       android:layout_marginTop="@dimen/dp_10"
       android:drawableEnd="@drawable/icon_arrow"
       app:layout_constraintTop_toBottomOf="@id/tv_todo"
       />
   <TextView
       android:id="@+id/tv_see"
       android:layout_width="match_parent"
       android:layout_height="@dimen/dp_50"
       android:text="@string/main_mine_see_live"
       android:gravity="center_vertical"
       android:drawableStart="@drawable/icon_see"
       android:paddingStart="@dimen/dp_15"
       android:paddingEnd="@dimen/dp_15"
       android:drawablePadding="@dimen/dp_5"
       android:layout_marginTop="@dimen/dp_10"
       android:drawableEnd="@drawable/icon_arrow"
       app:layout_constraintTop_toBottomOf="@id/tv_live"
       />

</androidx.constraintlayout.widget.ConstraintLayout>